objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Account name from PSG Org.  Need this as standard name has Expedia ID embedded for lookup search</description>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Star_Rating__c</fullName>
        <formula>TEXT(Star_Rating_Review_ID__r.Assigned_Star_Rating__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned Star Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Brand hotels rolls up to</description>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chain__c</fullName>
        <description>Chain property rolls up to</description>
        <label>Chain</label>
        <referenceTo>Chain__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closest_Airport__c</fullName>
        <description>Airport Code for nearest airport</description>
        <label>Closest Airport</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Manager_2009__c</fullName>
        <description>Id for contract in Contract manager for 2009.  Horrible design because that is how PSG does it</description>
        <label>Contract Manager 2009</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Manager_2010__c</fullName>
        <description>Id for contract in Contract manager for year in label. Horrible design because that is how PSG does it</description>
        <label>Contract Manager 2010</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Manager_2011__c</fullName>
        <description>Id for contract in Contract manager for year in label. Horrible design because that is how PSG does it</description>
        <label>Contract Manager 2011</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Manager_Upside_2011__c</fullName>
        <description>Id for contract in Contract manager for Upside in year in label. Horrible design because that is how PSG does it</description>
        <label>Contract Manager Upside 2011</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Manager_Upside_2012__c</fullName>
        <description>Id for contract in Contract manager for Upside in year in label. Horrible design because that is how PSG does it</description>
        <label>Contract Manager Upside 2012</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Solicitation_2011__c</fullName>
        <description>Pulled from PSG</description>
        <label>Contract Solicitation 2011</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Solicitation_2012__c</fullName>
        <description>Pulled from PSG</description>
        <label>Contract Solicitation 2012</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <description>Field from PSG</description>
        <label>Contract Term</label>
        <picklist>
            <picklistValues>
                <fullName>1 Year - To be Discussed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year - In Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year - Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LT (2+ Yrs) - To be Discussed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LT (2+Yrs) - In Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LT (2+ Yrs) - Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Accounts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_Types__c</fullName>
        <description>Different contract types for property</description>
        <label>Contract Type(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DS_Admintool_VNID__c</fullName>
        <description>Added to accommodate Account data upsert</description>
        <label>DS Admintool VNID</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Docusign_ID__c</fullName>
        <description>ID for documents in Docusign</description>
        <label>Docusign ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EAN_Id__c</fullName>
        <description>EAN ID of hotel</description>
        <label>EAN Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EQC_Addendum_CM__c</fullName>
        <description>Id for EQC contract in Contract manager. Horrible design because that is how PSG does it</description>
        <label>EQC Addendum CM #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESR_Merchant_Venere_ID__c</fullName>
        <description>The Venere ID for hotels that sell ESR inventory on the Venere POS. Also referred to as chameleon Venere ID.</description>
        <inlineHelpText>The Venere ID for hotels that sell ESR inventory on the Venere POS.</inlineHelpText>
        <label>ESR/Merchant Venere ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESR_Structure_Type__c</fullName>
        <description>Lookup to Structure Type for Property at ESR level</description>
        <label>ESR Structure Type</label>
        <referenceTo>Structure_Type__c</referenceTo>
        <relationshipLabel>Accounts (ESR Structure Types)</relationshipLabel>
        <relationshipName>ESR_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expedia_Hotel_Id__c</fullName>
        <description>Id that is unique identifier in Lodging Catalog Master database</description>
        <label>Expedia Hotel Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Account_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Salesforce Account.Id field from the PSG Org.  Needed for integration bewteen GSO and PSG Orgs</description>
        <externalId>true</externalId>
        <label>External Account Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HIMS_Stop_Sell__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if ESR Hotels is on Stop Sell from HIMS</description>
        <label>HIMS Stop Sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>H_S_Contact__c</fullName>
        <label>Health &amp; Safety Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hotwire_Id__c</fullName>
        <description>Hotwire Id</description>
        <label>Hotwire Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAN_Id__c</fullName>
        <description>Contains the Affiliate network Id for a property</description>
        <label>IAN Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <description>Latitude of account</description>
        <label>Latitude</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <description>Longitude of account</description>
        <label>Longitude</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MM_Territory__c</fullName>
        <label>MM Territory</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Manager_Email__c</fullName>
        <description>Email address for Market Manager (Account Owner from PSG Salesforce)</description>
        <inlineHelpText>Email address for Market Manager</inlineHelpText>
        <label>Market Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Market_Manager_Name__c</fullName>
        <description>Name for Market Manager (Account Owner) from PSG Salesforce</description>
        <inlineHelpText>This is the Account Owner from PSG Salesforce</inlineHelpText>
        <label>Market Manager Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Manager_Phone__c</fullName>
        <description>Phone number for Market Manager (Account Owner) from PSG Salesforce</description>
        <inlineHelpText>Market Manager phone number</inlineHelpText>
        <label>Market Manager Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_of_rooms__c</fullName>
        <description>Number of rooms available at the property</description>
        <label>Number of rooms</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PSG_Lead_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this is a lead account in PSG.  They have a recordtype.  We don&apos;t want that overhead but do want to call out if this is a lead</description>
        <label>PSG Lead Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PSG_Market_Id__c</fullName>
        <description>Salesforce Id for Market from PSG Salesforce</description>
        <label>PSG_Market_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSG_Record_Type__c</fullName>
        <description>Developer Name field of PSG Record Type. Used by workflow rules to set correct GSO RecordType</description>
        <label>PSG Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSG_Region_Id__c</fullName>
        <description>Salesforce Id for the Region in PSG Salesforce</description>
        <label>PSG_Region_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSG_Status__c</fullName>
        <description>From PSG Salesforce. Infamous PSG Status field</description>
        <label>PSG Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSG_Submarket_Id__c</fullName>
        <description>Salesforce Id for submarket in PSG Salesforce</description>
        <label>PSG_Submarket_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Venere_ID_Date__c</fullName>
        <label>Request Venere ID Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Venere_ID__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Venere ID?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Star_Rating_Review_ID__c</fullName>
        <label>Star Rating Review ID</label>
        <referenceTo>Star_Rating_Review__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Star_Rating_Structure_Type__c</fullName>
        <description>Lookup to Structure Type for Property</description>
        <label>Star Rating Structure Type</label>
        <referenceTo>Structure_Type__c</referenceTo>
        <relationshipLabel>Star Ratings Review (Structure Types)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Venere property</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stop_Sell_Reason__c</fullName>
        <description>Field for PSG</description>
        <label>Stop Sell Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Remove - bad economics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove - closed, change of use or demolished</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove - duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove - guest issues, relocations or discrimination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove - health &amp; safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove - legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove - low demand/sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove - owner/ mangement change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove - payment issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove - rate issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove - will re-contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revert to GDS - bad economics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revert to GDS - closed, change of use or demolished</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revert to GDS - guest issues, relocations or discrimination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revert to GDS - health &amp; safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revert to GDS – legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revert to GDS - low demand/sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revert to GDS - owner/ mangement change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revert to GDS - payment issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revert to GDS - rate issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revert to GDS - will re-contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switched to EEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary - bad economics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary – contracting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary - guest issues, relocations or discrimination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary - health &amp; safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary - legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary - low demand/sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary - MPIF pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary - no longer branded</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stop_Sell_Start_Date__c</fullName>
        <description>Pulled from PSG.  Mapped to Stop_Sell_Start_Date_Temp field in PSG.</description>
        <label>Stop Sell Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submarket__c</fullName>
        <description>Looks up to the submarket the account belongs to</description>
        <label>Submarket</label>
        <referenceTo>Submarket__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Super_Region__c</fullName>
        <label>Super Region</label>
        <referenceTo>Super_Region__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Code__c</fullName>
        <label>Vendor Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Id__c</fullName>
        <description>Contains the Vendor Id for a property</description>
        <label>Vendor Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venere_Contract_Status__c</fullName>
        <description>Status of the venere contracting process</description>
        <label>Venere Contract Status</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Deactivated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Reactivated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent affiliation email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent affiliation email to a properties group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed Contract</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Venere_Id__c</fullName>
        <description>Unique id for Venere property</description>
        <externalId>true</externalId>
        <label>Venere Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venere_Status__c</fullName>
        <description>Status of the Venere property</description>
        <label>Venere Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Venere_Structure_Type__c</fullName>
        <description>Structure type for Venere property</description>
        <label>Venere Structure Type</label>
        <referenceTo>Structure_Type__c</referenceTo>
        <relationshipLabel>Accounts (Venere Structure Type)</relationshipLabel>
        <relationshipName>Venere_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>of_Accounts__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>Expedia_Hotel_Id__c</columns>
        <columns>Venere_Id__c</columns>
        <columns>Super_Region__c</columns>
        <columns>Submarket__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Connectivity_Vendors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Connectivity_Vendor</value>
        </filters>
        <label>Connectivity Vendors</label>
        <sharedTo>
            <groups>HSTS EQC Help</groups>
            <groups>HSTS VC Help</groups>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Destination_Services</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Super_Region__c</columns>
        <columns>Region__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>Market_Manager_Name__c</columns>
        <columns>Market_Manager_Phone__c</columns>
        <columns>Market_Manager_Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Destination_Services</value>
        </filters>
        <label>Destination Services</label>
    </listViews>
    <listViews>
        <fullName>Hotels</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS2_STATE</columns>
        <columns>Brand__c</columns>
        <columns>Chain__c</columns>
        <columns>Expedia_Hotel_Id__c</columns>
        <columns>Vendor_Id__c</columns>
        <columns>Venere_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Hotel</value>
        </filters>
        <filters>
            <field>PSG_Lead_Account__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Hotels</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Air</fullName>
        <active>true</active>
        <label>Air</label>
    </recordTypes>
    <recordTypes>
        <fullName>Car</fullName>
        <active>true</active>
        <label>Car</label>
    </recordTypes>
    <recordTypes>
        <fullName>Connectivity_Vendor</fullName>
        <active>true</active>
        <description>Connectivity Vendors</description>
        <label>Connectivity Vendor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Destination_Services</fullName>
        <active>true</active>
        <description>Represents a destination services vendor</description>
        <label>Destination Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>External_Contact</fullName>
        <active>true</active>
        <description>Record Type for 1:1 account id on contacts so searching works</description>
        <label>External Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Health_Safety</fullName>
        <active>true</active>
        <label>Health &amp; Safety</label>
    </recordTypes>
    <recordTypes>
        <fullName>Hotel</fullName>
        <active>true</active>
        <description>Represents a hotel or property on an Expedia Inc point of sale</description>
        <label>Hotel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Contact</fullName>
        <active>true</active>
        <description>Internal Contacts map to this for the 1:1 contact lookup</description>
        <label>Internal Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Transportation</fullName>
        <active>true</active>
        <description>Represents a transportation vendor</description>
        <label>Transportation</label>
    </recordTypes>
</CustomObject>